Fix contrast on language dropdown

--- a/directory_components/export_elements/sass/components/header-footer-v2/_forms.scss
+++ b/directory_components/export_elements/sass/components/header-footer-v2/_forms.scss
@@ -42,6 +42,10 @@ body.js-enabled {
     display: none;
   }
 
+  option {
+    color: $black;
+  }
+
   label {
     margin-right: 5px;
   }
