--- a/directory_components/static/directory_components/export_elements/stylesheets/elements-components.css
+++ b/directory_components/static/directory_components/export_elements/stylesheets/elements-components.css
@@ -17,7 +17,8 @@
 #footer a:focus {
   outline: 3px solid #ffbf47; }
 
-#header, #footer {
+#header,
+#footer {
   background-color: #1e1348;
   color: #ffffff; }
   #header .column-fifth,
@@ -1584,6 +1585,9 @@ body.js-enabled .great-header-country-select {
 .great-header-form select::-ms-expand {
   display: none; }
 
+.great-header-form option {
+  color: #000000; }
+
 .great-header-form label {
   margin-right: 5px; }
 
@@ -1801,16 +1805,12 @@ a.labelled-card, a.labelled-image-card {
   a.labelled-card:focus, a.labelled-image-card:focus {
     outline: none; }
     a.labelled-card:focus .card-image, a.labelled-image-card:focus .card-image,
-    a.labelled-card:focus .card-header h3,
-    a.labelled-image-card:focus .card-header h3,
-    a.labelled-card:focus .card-inner,
-    a.labelled-image-card:focus .card-inner {
+    a.labelled-card:focus .card-header h3, a.labelled-image-card:focus .card-header h3,
+    a.labelled-card:focus .card-inner, a.labelled-image-card:focus .card-inner {
       outline: #ffbf47 solid 3px;
       outline-offset: 0;
       outline-offset: -3px; }
-    
-    a.labelled-card:focus .card-inner,
-    a.labelled-image-card:focus .card-inner {
+    a.labelled-card:focus .card-inner, a.labelled-image-card:focus .card-inner {
       border-color: #ffffff; }
   a.labelled-card:active, a.labelled-image-card:active {
     background-color: transparent; }
@@ -1819,12 +1819,9 @@ a.labelled-card, a.labelled-image-card {
   a.labelled-card .card-header, a.labelled-image-card .card-header {
     z-index: 0; }
   a.labelled-card .card-header, a.labelled-image-card .card-header,
-  a.labelled-card .card-header h3,
-  a.labelled-image-card .card-header h3 {
+  a.labelled-card .card-header h3, a.labelled-image-card .card-header h3 {
     display: inline-block; }
-  
-  a.labelled-card .card-header h3,
-  a.labelled-image-card .card-header h3 {
+  a.labelled-card .card-header h3, a.labelled-image-card .card-header h3 {
     font-family: 'Roboto', arial, helvetica, sans-serif;
     font-size: 19px;
     font-weight: 700;
